# dqn-practice

./: .env.example  .gitignore  README.md  Taskfile.yml  main.py  network.py  play.py  play_old.py  pyproject.toml  train.py  train_old.py  utils.py
envs/: grid_world.py
modules/: logging.py
