[tool.poetry]
name = "dqn"
version = "0.1.0"
description = ""
authors = ["alexsword88 <alexsword88@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.4.0+cu121", source = "torch"}
torchvision = {version = "^0.19.0+cu121", source = "torch"}
torchaudio = {version = "^2.4.0+cu121", source = "torch"}
gymnasium = {extras = ["classic-control"], version = "^0.29.1"}
matplotlib = "^3.9.2"
numpy = {version = "^1.0.0", platform = "win32"}
ipython = "^8.26.0"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
